Implement tool edit handler
