# internal/services/engine/server/tool.go
@@ -25,3 +25,19 @@ func (s *Server) AvailableTools(ctx context.Context, request *pbEngine.Available
 		Tools: pbTools,
 	}, nil
 }
+
+func (s *Server) EditTool(ctx context.Context, request *pbEngine.EditToolRequest) (*pbEngine.EditToolResponse, error) {
+	id := request.GetId()
+	userID := request.GetUserId()
+	externalMethod := request.GetExternalMethod()
+	name := request.GetName()
+
+	edited, err := s.toolService.EditOne(ctx, id, userID, externalMethod, name)
+	if err != nil {
+		return nil, err
+	}
+
+	return &pbEngine.EditToolResponse{
+		Tool: convert.ToolToProto(edited),
+	}, nil
+}
