# internal/services/gateway/api/v1/response.go
@@ -4,12 +4,15 @@ import (
 	"net/http"
 
 	"github.com/gofiber/fiber/v2"
+
+	perror "github.com/tmrrwnxtsn/ecomway/internal/pkg/error"
 )
 
 const (
 	errorCodeInvalidRequest = "InvalidRequest"
 	errorCodeInvalidAPIKey  = "InvalidAPIKey"
 	errorCodeInternalError  = "InternalError"
+	errorCodeObjectNotFound = "ObjectNotFound"
 )
 
 type errorContent struct {
@@ -44,6 +47,16 @@ func (h *Handler) internalErrorResponse(c *fiber.Ctx, err error) error {
 		Error: errorContent{
 			Code:        errorCodeInternalError,
 			Description: err.Error(),
+		},
+	})
+}
+
+func (h *Handler) objectNotFoundErrorResponse(c *fiber.Ctx, perr *perror.Error) error {
+	return c.Status(http.StatusNotFound).JSON(&errorResponse{
+		Success: false,
+		Error: errorContent{
+			Code:        errorCodeObjectNotFound,
+			Description: perr.Description,
 		},
 	})
 }
